materialbox tweaks to deal with other overflows and z-index issues

--- a/sass/components/_materialbox.scss
+++ b/sass/components/_materialbox.scss
@@ -23,7 +23,7 @@
   right: 0;
   bottom: 0;
   background-color: #292929;
-  z-index: 999;
+  z-index: 1000;
 
   will-change: opacity;
 }
